# take-home-assigment

./: .gitignore  README.md  llm_evaluator.py  log.py  main.py  pyproject.toml  schemas.py  ticket_processor.py
data/: tickets_evaluated.csv
tests/: test_llm_evaluator.py  test_schemas.py  test_ticket_processor.py
